# parallel-file-compression-system

./: CMakeLists.txt  README.md
data/: sample.txt
include/: compressor.hpp  huffman.hpp  lz77.hpp  threadPool.hpp  utils.hpp
python/: cli.py  visualize.py
src/: compressor.cpp  huffman.cpp  lz77.cpp  main.cpp  threadPool.cpp  utils.cpp
